--- a/Admin.css
+++ b/Admin.css
@@ -12,7 +12,7 @@ body {
 }
 .box-1 {
   display: flex;
-  width: 100%;
+  width: 89%;
   height: 100px;
   padding: 0px 85.333px 0px;
   flex-direction: row;
@@ -34,7 +34,7 @@ body {
   display: flex;
   flex-direction: row;
   gap: 40px;
-  margin-right: 6%;
+  margin-right: -5%;
 }
 #user-1 {
   display: flex;
@@ -52,6 +52,7 @@ body {
   flex-direction: row;
   /* align-content: space-around; */
   gap: 20px;
+  margin-left: -2%;
 }
 #h3-title {
   display: flex;
@@ -64,7 +65,7 @@ body {
 }
 .search__container {
   display: flex;
-  margin-left: -40%;
+  margin-left: -50%;
   gap: 20px;
   /* align-self: center;
     justify-self: center; */
@@ -83,6 +84,9 @@ body {
     align-self: center;
     font-size: 20px;
     cursor: pointer;
+}
+#search-btn-2{
+  display: none;
 }
 ::placeholder {
   letter-spacing: 1.5px;
@@ -124,7 +128,7 @@ ul {
   list-style-type: none;
   overflow: hidden;
   width: 100%;
-  gap: 25px;
+  gap: 35px;
 }
 li {
   float: left;
@@ -351,22 +355,19 @@ line-height: 16px; /* 94.118% */
     /* border: 1px solid #000; */
 }
 .left-side{
-    /* display: flex; */
+    display: flex;
     width: 67%;
 height: 760px;
 flex-shrink: 0;
 border-radius: 10px;
 background: #FFF;
-/* border: 1px solid #000; */
-/* gap: 20px; */
-
-/* border: 1px solid #000; */
 }
 .comment{
     display: flex;
     flex-direction: column;
     gap: 20px;
     margin-left: 3%;
+    width: 90%;
 }
 .com-1{
     display: flex;
@@ -376,13 +377,15 @@ background: #FFF;
   .com-2{
     display: flex;
     gap: 12px;
+    width: 100%;
   }
-  .av-1{
-    /* border: 1px solid #000; */
+  /* .av-1{
+    display: flex;
+    border: 1px solid #000;
     width: 5%;
     height: 5%;
     border-radius: 50%;
-  }
+  } */
   .text-1{
     display: flex;
     flex-direction: column;
@@ -406,25 +409,36 @@ background: #FFF;
     display: none;
   }
 @media (max-width: 998px){
+  .box-1{
+    width: 100%;
+  }
+  #search-btn-2{
+    display: block;
+    justify-self: center;
+    align-self: center;
+    font-size: 20px;
+    cursor: pointer;
+  }
     .bar-1{
+
         width: 102rem;
-    }
-    .bar-1{
-        width: 100%;
     }
     .search__container{
         display: none;
     }
 }
 @media (max-width: 1490px){
+  .box-1{
+    width: 100%;
+  }
     .search__container{
         display: none;
     }
 }
 @media (max-width: 1449px) {
-    .bar-1{
-        width: 100%;
-    }
+  .box-1{
+    width: 100%;
+  }
     .over-bar{
         display: flex;
         flex-direction: column;
@@ -447,9 +461,38 @@ background: #FFF;
     }
 }
 @media (max-width: 768px) {
+  /* .av-1{
+    display: flex;
+    width: 5%;
+    height: 5%;
+    border-radius: 50%;
+  } */
+  .com-2{
+    /* display: flex;
+    gap: 12px; */
+    width: 70%;
+  }
+  .comment{
+    display: flex;
+    flex-direction: column;
+    margin-left: 35%;
+    gap: 20px;
+    width: 40%;
+}
+  .container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    overflow-x: hidden;
+  }
+  .box-1{
+    width: 100%;
+  }
     #lg-1{
         display: flex;
         align-self: center;
+        margin-left: 5%;
     }
     .sec-over{
         width: 100%;
@@ -476,7 +519,11 @@ background: #FFF;
         flex-direction: column;
     } */
     .bar-1{
-        width: 100%;
+      /* border: 1px solid #000; */
+      display: flex;
+      align-self: center;
+      justify-self: center;
+      width: 102rem;
     }
     .box-2{
         display: none;
@@ -492,6 +539,23 @@ background: #FFF;
         display: none;
     }
 }
+@media (max-width: 495px) {
+  #search-btn-2{
+    display: none;
+  }
+}
+@media (max-width: 285px) {
+  .box-1{
+    width: 100%;
+  }
+  #search-btn-2{
+    display: none;
+  }
+}
+/* @media (max-width: 1995px) {
+  .bar-1{
+    width: 120rem;
+  }
 
-
+} */
 
